@@ -3,7 +3,7 @@ context("expect_output")
 
 test_that("Creating the topAnat object is working", {
   bgee <- Bgee$new(species="Mus_musculus", dataType="rna_seq")
-  myTopAnatData <- loadTopAnatData(bgee, stage="UBERON:0000068")
+  myTopAnatData <- loadTopAnatData(bgee, stage="UBERON:0000106")
   geneList <- as.factor(c(rep(0, times=90), rep(1, times=10)))
   names(geneList) <- c("ENSMUSG00000064370", "ENSMUSG00000064368", "ENSMUSG00000064367",
                        "ENSMUSG00000064363", "ENSMUSG00000065947", "ENSMUSG00000064360",
